# video-maker

./: .gitignore  LICENSE  README.md  README_pt_br.md  pyproject.toml
assets/: match_data.json  thumbnail.html
credentials/: client_secrets.example.json
tests/: test_video_maker.py
video_maker/: main.py
video_maker/entities/: data_scrapper.py  match_data.py
video_maker/usecases/: create_thumbnail.py  data.py  record_video.py  scrap_lol_data.py  upload_youtube.py
